[tool.poetry]
name = "fklearn"
version = "2.1.0"
description = ""
authors = ["Nubank"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4"
joblib = ">=0.13.2,<2"
numpy = ">=1.16.4,<2"
pandas = ">=0.24.1,<2"
scikit-learn = ">=0.21.2,<0.24.0"
statsmodels = ">=0.9.0,<1"
toolz = ">=0.9.0,<1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.12b0"
pytest = ">=4.2.1,<7"
pytest-cov = ">=2.6.1,<3"
pytest-xdist = ">=1.26.1,<3"
mypy = ">=0.670,<1"
codecov = ">=2.0,<3"
hypothesis = ">= 5.5.4,<7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tools.mypy]
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "fklearn.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "fklearn.metrics.pd_extractors.*"
ignore_errors = true

[tool.pytest.ini_options]
adopts = "-l --color=yes"

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | .eggs
  | build
)/
'''
